--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "pinia": "^3.0.2",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.53.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
